--- a/quote.html
+++ b/quote.html
@@ -17,11 +17,10 @@
       <h1 class="display-2 mt-5" style="font-family: Great Vibes, cursive">Random Quote</h1>
       <h3 class="mx-5 mt-5 mb-2 pt-5 text-center"></h3>
       <p class="mb-5"><em id="author"></em></p>
-      <button id="newQuote" type="button" class="btn btn-primary">Click for quote</button>
+      <button id="newQuote" type="button" class="btn mr-5" style="background-color: #1b95e0; color: white;">Click for quote</button>
       <!-- twitter plugin -->
     <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- end twitter plugin -->
-      <button type="button" id="tweet" class="btn btn-primary">Tweet</button></a>
     </div>
 
 
